--- a/law/templates/pages/library_law.html
+++ b/law/templates/pages/library_law.html
@@ -4,7 +4,7 @@
 {% block title %}المكتبة القانونية{% endblock %}
 {% block content %}
 
-    <form action="" method="get" style="visibility: hidden;">
+    <form class="library-form" action="" method="get">
         <div class="search">
             <span class="icon">
                 <i class='bx bx-search icon'></i>
