--- a/law/templates/pages/consult.html
+++ b/law/templates/pages/consult.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+
 {% block title %}طلب استشارة قانونيه{% endblock %}
 {% block content %}
         <section class="consult">
             <div class="container">
                 <div class="consult-img">
-                    <img src="{% static 'images/23467.png'%}" alt="">
-                </div>
-        
-                <div class="text">
-                    <h1>احجز استشارتك القانونية الآن</h1>
+                    <div class="text">
+                        <h1>احجز استشارتك القانونية الآن</h1>
+                    </div>
                 </div>
             </div>
         </section>
@@ -111,7 +111,7 @@
                         {% endif %}
                     </div>
             
-                    <button type="submit" class="btn btn-input">ارسال</button>
+                    <button type="submit" class="btn-input" style="float: right;">ارسال</button>
                 </form>
             </div>
             
