--- a/law/static/css/library_law.css
+++ b/law/static/css/library_law.css
@@ -1,10 +1,11 @@
-form{
+.library-form{
     margin-block-start: 150px;
     display: grid;
     place-items: center;
     padding-inline: 30px;
+    visibility: hidden;
 }
-input{
+.library-form input{
     background: none;
     outline: none;
     border: none;
